--- a/consultorio-frontend/.env
+++ b/consultorio-frontend/.env
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL="http://localhost:3000/api"
+VITE_BACKEND_URL=https://consultorio-multidisciplinario.onrender.com/api
 
-VITE_BACKEND_STATIC_URL="http://localhost:3000"
+VITE_BACKEND_STATIC_URL=https://consultorio-multidisciplinario.onrender.com
 
